components/history/core/browser/history_constants.cc
@@ -18,6 +18,8 @@ const base::FilePath::CharType kTopSitesFilename[] =
 
 const int kMaxTopHosts = 50;
 
+const int kMaxTitleChanges = 10;
+
 base::TimeDelta GetTitleSettingWindow() {
   const auto value = base::TimeDelta::FromSeconds(5);
   return value;
