components/history/core/browser/history_constants.h
@@ -18,6 +18,11 @@ extern const base::FilePath::CharType kTopSitesFilename[];
 // The maximum size of the list returned by history::HistoryService::TopHosts().
 extern const int kMaxTopHosts;
 
+// The maximum number of times a page can change it's title during the relevant
+// timestamp (page is either loading is has recently loaded as per
+// GetTitleSettingWindow() below).
+extern const int kMaxTitleChanges;
+
 // The span of time after load is complete during which a page may set its title
 // and have the title change be saved in history.
 base::TimeDelta GetTitleSettingWindow();
